@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/117
+  Fix various reference leaks:
+  - Leak of a reference to Py_None in generator.throw()
+
 - https://bitbucket.org/stackless-dev/stackless/issues/111
   Restore the Python ABI function PyGen_New(). Previously Stackless named this
   function PyGenerator_New() and used a macro the redefine PyGen_New as
